# Grizzly

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: lib.rs
src/grizzly/: __init__.py  api.py  fallback.py  grizzly.py  ml.py  normalize.py
tests/: test_detect_schema.py  test_info.py  test_normalize_optional.py
