[package]
name = "grizzly"
version = "0.1.0"
edition = "2021"

[lib]
name = "grizzly"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
csv = "1.3"
flate2 = "1.0"
ahash = "0.8"
hashbrown = "0.14"
ryu = "1.0"
rayon = "1.10"
tdigest = "0.2"
fast-float = "0.2"
memchr = "2.7"
memmap2 = "0.9"
lasso = { version = "0.7", features = ["multi-threaded"] }
bumpalo = "3.16"
atoi_simd = "0.16"  # Same as Polars - SIMD-accelerated integer parsing

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"


